--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Date Formatter using moment",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node tests/tests.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/dhershman1/dateprettify#readme",
   "dependencies": {
     "moment": "^2.13.0"
+  },
+  "devDependencies": {
+    "tape": "^4.6.3"
   }
 }
