--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dateprettify",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simple Date Formatter using moment",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "node tests/tests.js"
   },
