--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Date Formatter using moment",
   "main": "index.js",
   "scripts": {
-    "test": "node tests/tests.js"
+    "test": "node tests/tests.js | tap-spec"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "moment": "^2.13.0"
   },
   "devDependencies": {
+    "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
   }
 }
