--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "dateprettify",
-  "version": "1.1.0",
-  "description": "Simple Date Formatter using moment",
-  "main": "index.js",
+  "version": "1.2.0",
+  "description": "Simple Date Formatter utility using moment",
+  "main": "dist/dateprettify.umd.js",
   "scripts": {
-    "test": "node tests/tests.js | tap-spec"
+		"prepublish": "rollup -c",
+		"rollup:tests": "rollup -i tests/tests.js -f cjs -o tests/tests.cjs.js -e tape,moment && rollup -c",
+		"pretest": "npm run rollup:tests",
+    "test": "node tests/tests.cjs.js | tap-spec"
   },
   "repository": {
     "type": "git",
@@ -26,6 +29,9 @@
     "moment": "^2.13.0"
   },
   "devDependencies": {
+    "rollup": "^0.43.0",
+    "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-uglify": "^2.0.1",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
   }
