--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "dateprettify",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Simple Date Formatter utility using moment",
   "main": "dist/dateprettify.umd.js",
   "scripts": {
-		"prepublish": "rollup -c",
-		"rollup:tests": "rollup -i tests/tests.js -f cjs -o tests/tests.cjs.js -e tape,moment && rollup -c",
-		"pretest": "npm run rollup:tests",
+    "prepare": "rollup -c",
     "test": "node tests/tests.cjs.js | tap-spec"
   },
   "repository": {
@@ -16,7 +14,7 @@
   "keywords": [
     "dates",
     "prettify",
-    "moment",
+    "date-fns",
     "formatting"
   ],
   "author": "Dustin Hershman",
@@ -26,13 +24,13 @@
   },
   "homepage": "https://github.com/dhershman1/dateprettify#readme",
   "dependencies": {
-    "moment": "^2.13.0"
+    "date-fns": "1.29.0"
   },
   "devDependencies": {
-    "rollup": "^0.43.0",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-uglify": "^2.0.1",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.6.3"
+    "rollup": "0.50.0",
+    "rollup-plugin-buble": "0.16.0",
+    "rollup-plugin-uglify": "2.0.1",
+    "tap-spec": "4.1.1",
+    "tape": "4.8.0"
   }
 }
